@startuml
abstract class Product {
  - id: int
  - name: str
  - preis: float
  - gewicht: float
  + to_row(): dict
}

class Electronics {
  - marke: str
  - garantie_jahre: int
}

class Clothing {
  - groesse: str
}

class Book {
  - autor: str
  - seitenanzahl: int
}

Product <|-- Electronics
Product <|-- Clothing
Product <|-- Book

class Kunde {
  + id: int
  + name: str
  + email: str
}

class Bewertung {
  + id: int
  + kunde_id: int
  + produkt_id: int
  + sterne: int
  + kommentar: str
}

class Storage {
  - database_name: str
  - connection
  + connect()
  + disconnect()
  + query(sql, params)
  + fetch_all(sql, params) : list[dict]
  + save_kunde(k)
  + load_kunde(id) : dict
  + load_alle_kunden() : list[dict]
  + load_produkt(id) : dict
  + load_alle_produkte() : list[dict]
}

Kunde "1" -- "0..*" Bewertung
Product "1" -- "0..*" Bewertung
@enduml
